cfn_benchmark/cfn_templates/konono__gitlab_compose/cfn/gitlab-cfn.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: >
  Unified template for deploying GitLab or Grafana with VPC, EC2 instances, NLB, and ALB.

Parameters:
  Workspace:
    Type: String

  Env:
    Type: String
    Default: dev1

  App:
    Type: String
    Default: gitlab

  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
    Type: String
    Default: cs-key-pair

  InstanceType:
    Description: EC2 Instance type
    Type: String
    Default: t3.xlarge

  DomainName:
    Description: Base domain name for the hosted zone (e.g., example.com)
    Type: String

  HostedZoneId:
    Description: The ID of the existing Route 53 Hosted Zone
    Type: String

  CertificateArn:
    Description: ARN of the ACM certificate
    Type: String

Mappings:
  AWSRegionToAMI:
    us-east-1:
      AmiId: ami-0542a534f6bde2f67
    ap-northeast-1:
      AmiId: ami-0978546afdc61a0ef

Resources:
  # VPC and Subnets
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 172.20.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub ${Workspace}-${Env}-Vpc

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 172.20.1.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: !Sub ${Workspace}-${Env}-PublicSubnet1

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 172.20.2.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
        - Key: Name
          Value: !Sub ${Workspace}-${Env}-PublicSubnet2

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${Workspace}-${Env}-InternetGateway

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${Workspace}-${Env}-PublicRouteTable

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  SubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  SubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  # Security Groups
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: ALB SecurityGroup
      Tags:
        - Key: Name
          Value: !Sub ${Workspace}-${Env}-${App}-alb-sg

  NLBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: NLB SecurityGroup
      Tags:
        - Key: Name
          Value: !Sub ${Workspace}-${Env}-${App}-nlb-sg

  BackendSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Backend SecurityGroup
      Tags:
        - Key: Name
          Value: !Sub ${Workspace}-${Env}-${App}-backend-sg

  # Security Group Ingress Rules
  ALBSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref ALBSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      CidrIp: 0.0.0.0/0

  NLBSecurityGroupIngressHTTPS:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref NLBSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      CidrIp: 0.0.0.0/0

  NLBSecurityGroupIngressGit:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref NLBSecurityGroup
      IpProtocol: tcp
      FromPort: 10022
      ToPort: 10022
      CidrIp: 0.0.0.0/0

  BackendSecurityGroupIngressFromALB:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref BackendSecurityGroup
      IpProtocol: tcp
      FromPort: 8080
      ToPort: 8080
      SourceSecurityGroupId: !Ref ALBSecurityGroup

  BackendSecurityGroupIngressFromNLBHTTPS:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref BackendSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      SourceSecurityGroupId: !Ref NLBSecurityGroup

  BackendSecurityGroupIngressFromNLBGit:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref BackendSecurityGroup
      IpProtocol: tcp
      FromPort: 10022
      ToPort: 10022
      SourceSecurityGroupId: !Ref NLBSecurityGroup

  BackendSecurityGroupIngressSSH:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref BackendSecurityGroup
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      CidrIp: 0.0.0.0/0

  # EC2 Instance
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !FindInMap [AWSRegionToAMI, !Ref "AWS::Region", AmiId]
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - DeleteOnTermination: true
          DeviceIndex: 0
          SubnetId: !Ref PublicSubnet1
          GroupSet:
            - !Ref BackendSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash -x
            echo "deployed!!!" > /tmp/deployed

  LoadBalancerNLB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub "${Workspace}-${Env}-${App}-NLB"
      Type: network
      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      Scheme: internet-facing
      SecurityGroups:
        - !Ref NLBSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub "${Workspace}-${Env}-${App}-NLB"

  LoadBalancerHTTPS:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub "${Workspace}-${Env}-${App}-ALB"
      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      SecurityGroups:
        - !Ref ALBSecurityGroup
      Scheme: internet-facing
      Tags:
        - Key: Name
          Value: !Sub "${Workspace}-${Env}-${App}-ALB"

  NLBALBTargetGroup:
    DependsOn: HTTPSListener
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub "${Workspace}-${Env}-${App}-NLB-ALB-TG"
      VpcId: !Ref VPC
      Port: 443
      Protocol: TCP
      TargetType: alb
      Targets:
        - Id: !Ref LoadBalancerHTTPS
      HealthCheckProtocol: HTTPS
      HealthCheckPort: "443"
      HealthCheckIntervalSeconds: 30
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 10

  HTTPSTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub "${Workspace}-${Env}-${App}-HTTPS-TG"
      VpcId: !Ref VPC
      Port: 8080
      Protocol: HTTP
      TargetType: instance
      Targets:
        - Id: !Ref EC2Instance
      HealthCheckPath: '/-/health'
      HealthCheckProtocol: HTTP
      HealthCheckPort: "8080"
      HealthCheckIntervalSeconds: 30
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 10

  NLBGitTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub "${Workspace}-${Env}-${App}-NLB-Git-TG"
      VpcId: !Ref VPC
      Port: 10022
      Protocol: TCP
      TargetType: instance
      Targets:
        - Id: !Ref EC2Instance

  NLBHTTPSListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref NLBALBTargetGroup
      LoadBalancerArn: !Ref LoadBalancerNLB
      Port: 443
      Protocol: TCP

  NLBGitListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref NLBGitTargetGroup
      LoadBalancerArn: !Ref LoadBalancerNLB
      Port: 10022
      Protocol: TCP

  HTTPSListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref HTTPSTargetGroup
      LoadBalancerArn: !Ref LoadBalancerHTTPS
      Port: 443
      Protocol: HTTPS
      Certificates:
        - CertificateArn: !Ref CertificateArn

  HostedZoneDNSRecord:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneId: !Ref HostedZoneId
      Name: !Sub "${App}-${Env}.${DomainName}"
      Type: A
      AliasTarget:
        HostedZoneId: !GetAtt 'LoadBalancerNLB.CanonicalHostedZoneID'
        DNSName: !GetAtt 'LoadBalancerNLB.DNSName'

Outputs:
  VPCId:
    Value: !Ref VPC
    Export:
      Name: !Sub "${Workspace}-${Env}-VpcId"

  EC2InstanceId:
    Value: !Ref EC2Instance
    Export:
      Name: !Sub ${AWS::StackName}-EC2Instance

  LoadBalancerNLBDNSName:
    Value: !GetAtt LoadBalancerNLB.DNSName
    Export:
      Name: !Sub "${Workspace}-${Env}-${App}-NLB-DNSName"
